--- a/server/chatgpt-core/pom.xml
+++ b/server/chatgpt-core/pom.xml
@@ -9,6 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>chatgpt-core</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.21</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
